HAWQ-5. Update PXF to compile with HDP 2.3 components.
Hadoop 2.7.1, HBase 1.1.1, Hive 1.2.1

--- a/pxf-service/src/main/resources/pxf-privatehdp.classpath
+++ b/pxf-service/src/main/resources/pxf-privatehdp.classpath
@@ -22,7 +22,7 @@
 /usr/hdp/current/hadoop-client/lib/commons-lang-*[0-9].jar
 /usr/hdp/current/hadoop-client/lib/commons-logging-*[0-9].jar
 /usr/hdp/current/hadoop-client/lib/guava-*[0-9].jar
-/usr/hdp/current/hadoop-client/lib/htrace-core-*[0-9].jar
+/usr/hdp/current/hadoop-client/lib/htrace-core-*[0-9]*.jar
 /usr/hdp/current/hadoop-client/lib/hadoop-lzo-*[0-9].jar
 /usr/hdp/current/hadoop-client/lib/jackson-core-asl-*[0-9].jar
 /usr/hdp/current/hadoop-client/lib/jackson-mapper-asl-*[0-9].jar
@@ -36,7 +36,7 @@
 /usr/hdp/current/hbase-client/lib/hbase-client.jar
 /usr/hdp/current/hbase-client/lib/hbase-common.jar
 /usr/hdp/current/hbase-client/lib/hbase-protocol.jar
-/usr/hdp/current/hbase-client/lib/htrace-core-*[0-9].jar
+/usr/hdp/current/hbase-client/lib/htrace-core-*[0-9]*.jar
 /usr/hdp/current/hbase-client/lib/netty-*[0-9].Final.jar
 /usr/hdp/current/zookeeper-client/zookeeper.jar
 /usr/hdp/current/hive-client/lib/antlr-runtime-*[0-9].jar
