--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 version=3.0.0.0
-hadoopVersion=2.6.0
-hiveVersion=0.14.0
-hbaseVersionJar=0.98.4-hadoop2
-hbaseVersionRPM=0.98.4
+hadoopVersion=2.7.1
+hiveVersion=1.2.1
+hbaseVersionJar=1.1.1
+hbaseVersionRPM=1.1.1
 tomcatVersion=7.0.62
