--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,22 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
+
 buildscript {
     repositories {
         // mavenCentral without https:
@@ -95,7 +114,7 @@ subprojects { subProject ->
         release = buildNumber()
         version = subProject.version.split('-')[0];
         os = LINUX
-        license = "Copyright (c) ${new Date().format("yyyy")} Pivotal Software, Inc. All Rights reserved."
+        license = "ASL 2.0"
         obsoletes('gpxf')
         user = 'root'
         permissionGroup = 'root'
@@ -374,7 +393,7 @@ task tomcatRpm(type: Rpm) {
         release = buildNumber()
         version = tomcatVersion
         os = LINUX
-        license = "Copyright (c) ${new Date().format("yyyy")} Pivotal Software, Inc. All Rights reserved."
+        license = "ASL 2.0"
         user = 'root'
         permissionGroup = 'root'
 
