--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,8 @@
 # under the License.
 
 version=3.0.0
+license=ASL 2.0
+vendor=Apache HAWQ Incubating
 hadoopVersion=2.7.1
 hiveVersion=1.2.1
 hbaseVersionJar=1.1.2
