--- a/pxf-service/src/main/resources/pxf-privatephd.classpath
+++ b/pxf-service/src/main/resources/pxf-privatephd.classpath
@@ -49,3 +49,4 @@
 /usr/lib/pxf/pxf-hbase-*[0-9].jar
 /usr/lib/pxf/pxf-hdfs-*[0-9].jar
 /usr/lib/pxf/pxf-hive-*[0-9].jar
+/usr/lib/pxf/pxf-json-*[0-9].jar
