--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@
 # specific language governing permissions and limitations
 # under the License.
 
+version=3.2.0.0
 license=ASL 2.0
 vendor=Apache HAWQ Incubating
 hadoopVersion=2.7.1
