--- a/pxf-service/src/main/resources/pxf-privatehdp.classpath
+++ b/pxf-service/src/main/resources/pxf-privatehdp.classpath
@@ -64,3 +64,4 @@
 /usr/lib/pxf/pxf-hdfs-*[0-9].jar
 /usr/lib/pxf/pxf-hive-*[0-9].jar
 /usr/lib/pxf/pxf-json-*[0-9].jar
+/usr/lib/pxf/pxf-jdbc-*[0-9].jar
