--- a/pxf-service/src/main/resources/pxf-log4j.properties
+++ b/pxf-service/src/main/resources/pxf-log4j.properties
@@ -23,7 +23,7 @@ log4j.rootLogger=INFO, ROLLINGFILE
 
 log4j.appender.ROLLINGFILE=org.apache.log4j.RollingFileAppender
 # use the same value directory as set for $PXF_LOGDIR
-log4j.appender.ROLLINGFILE.File=/var/log/pxf/pxf-service.log
+log4j.appender.ROLLINGFILE.File=${pxf.log.dir}/pxf-service.log
 log4j.appender.ROLLINGFILE.MaxFileSize=10MB
 log4j.appender.ROLLINGFILE.MaxBackupIndex=10
 log4j.appender.ROLLINGFILE.layout=org.apache.log4j.PatternLayout
