--- a/gradle/profiles/hawq.properties
+++ b/gradle/profiles/hawq.properties
@@ -5,9 +5,9 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 #   http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -15,13 +15,6 @@
 # specific language governing permissions and limitations
 # under the License.
 
-version=3.3.0.0
-license=ASL 2.0
-vendor=Apache HAWQ Incubating
-hadoopVersion=2.7.1
-hiveVersion=1.2.1
-hbaseVersionJar=1.1.2
-hbaseVersionRPM=1.1.2
-tomcatVersion=7.0.62
-pxfProtocolVersion=v15
-osFamily=el6
+pxfDefaultUser=pxf
+pxfLogDir=/var/log/pxf
+pxfRunDir=/var/run/pxf
