HAWQ-1496. Add DISCLAIMER, LICENSE and NOTICE files into PXF rpm.
The files will be installed into /opt/pxf-${project.version} directory.

--- a/build.gradle
+++ b/build.gradle
@@ -336,6 +336,18 @@ project('pxf') {
         link('/etc/pxf', "/etc/pxf-${project.version}")
         link('/opt/pxf', "/opt/pxf-${project.version}")
         link('/etc/init.d/pxf-service', "/opt/pxf/pxf-service")
+
+        from('../resources/META-INF/DISCLAIMER') {
+            into "/opt/pxf-${project.version}"
+        }
+
+        from('../resources/META-INF/LICENSE') {
+            into "/opt/pxf-${project.version}"
+        }
+
+        from('../resources/META-INF/NOTICE') {
+            into "/opt/pxf-${project.version}"
+        }
     }
 }
 
