HAWQ-1539. Adding metrics-core jar to PXF classpath for HBase

--- a/pxf-service/src/configs/templates/pxf-private.classpath.template
+++ b/pxf-service/src/configs/templates/pxf-private.classpath.template
@@ -78,3 +78,4 @@ HBASE_HOME/lib/hbase-protocol*.jar
 HBASE_HOME/lib/htrace-core*.jar
 HBASE_HOME/lib/netty*.jar
 HBASE_HOME/lib/zookeeper*.jar
+HBASE_HOME/lib/metrics-core*.jar
