HAWQ-1036. Implement user impersonation in PXF
(close #1339)

--- a/build.gradle
+++ b/build.gradle
@@ -196,12 +196,14 @@ project('pxf-service') {
     apply plugin: 'war'
     tasks.war {
         archiveName = 'pxf.war'
+        filter(ReplaceTokens, tokens: ['pxfProtocolVersion': project.pxfProtocolVersion])
         processResources {
             filesMatching('**/pxf-*') {
                 details ->
                     details.exclude()
             }
         }
+
     }
     dependencies {
         compile(project(':pxf-api'))
@@ -269,7 +271,8 @@ project('pxf-service') {
                     tokens: ['pxfLogDir'     :  databaseProperties.pxfLogDir,
                              'pxfRunDir'     :  databaseProperties.pxfRunDir,
                              'pxfPortNum'    :  databaseProperties.pxfPortNum,
-                             'pxfDefaultUser': (databaseProperties.pxfDefaultUser == null ? "" : databaseProperties.pxfDefaultUser)])
+                             'pxfDefaultUser': (databaseProperties.pxfDefaultUser == null ? "" : databaseProperties.pxfDefaultUser),
+                             'pxfDefaultUserImpersonation': (databaseProperties.pxfDefaultUserImpersonation == null ? "" : databaseProperties.pxfDefaultUserImpersonation)])
             into "/etc/pxf-${project.version}/conf"
         }
         
@@ -645,7 +648,8 @@ task install(type: Copy, dependsOn: [subprojects.build, tomcatGet]) {
                 tokens: ['pxfLogDir'     : databaseProperties.pxfLogDir,
                          'pxfRunDir'     : databaseProperties.pxfRunDir,
                          'pxfPortNum'    : databaseProperties.pxfPortNum,
-                         'pxfDefaultUser': (databaseProperties.pxfDefaultUser == null ? "" : databaseProperties.pxfDefaultUser)]) into 'conf'
+                         'pxfDefaultUser': (databaseProperties.pxfDefaultUser == null ? "" : databaseProperties.pxfDefaultUser),
+                         'pxfDefaultUserImpersonation': (databaseProperties.pxfDefaultUserImpersonation == null ? "" : databaseProperties.pxfDefaultUserImpersonation)]) into 'conf'
     }
     from("pxf-service/src/configs/tomcat") { into 'tomcat-templates' }
     from("pxf-service/src/configs/templates") { into 'conf-templates' }
